--- a/src/main/webapp/resources/css/cardViewer.css
+++ b/src/main/webapp/resources/css/cardViewer.css
@@ -2,40 +2,51 @@ body {
 	background-color: #99FF88;
 }
 
-h1 {
-	text-align: center;
-}
+
 
 #container {
 	text-align:center;
-	width: 75%;
+	border-style: ridge;
+	width: 760px;
 	margin: 125px;
+	background-color: #EEEEEE;
 }
 
 #deck_title {
-	color: black;
+	color: yellow;
+	text-align: left; 
+	padding-left: 25px;
 	font-family: Tahoma, Helvetica;
-	font-size: 2em;
-	margin: 25px;
+	font-size: 0.75em;
+	background-color: #FF9966;
+}
+
+#flipbox {	
+	color: black;
+	background-color: #CCFFCC;
+	height: 150px;
+	line-height: 150px;
+	text-align: center;
+	font-family: Tahoma, Helvetica;
+	font-size: 1.5em;
+	border-style: solid;
+	border-color: #FF9933;
 }
 
 #previous,#flipit,#next {
 	text-decoration: none;
 }
 
-
-
-#flipbox {	
-	color: black;
-	font-family: Tahoma, Helvetica;
-	font-size: 1.5em;
-	display: inline;
-}
-
-#nav_buttons {
-
-}
 footer {
 	text-align: right;
-	margin: 50px; 
+	margin-right: 25px;
+}
+
+#social {
+	margin: 0;
+}
+
+#copyright {
+	font-size: small;
+	margin: 0; 
 }
