--- a/src/main/webapp/resources/css/deckList.css
+++ b/src/main/webapp/resources/css/deckList.css
@@ -3,12 +3,38 @@ body {
 	width: 720px;
 	margin: 0 auto;
 }
+
+#container { 
+	margin-top: 100px;
+	background-color: #FFFF99;
+}
+
+.intro {
+	padding-left: 5px;	
+}
 	
 ul { 
 	list-style-type: none;
 	padding: 25px; 
 	margin: 25px;
 }
+
+li { 
+	padding-left: 5px;
+}
+
 li.even { background: lightGoldenrodYellow; }
 li.odd { background: lightCyan; }
 
+#copyright {
+	font-size: small;
+	margin: 0px; 
+}
+
+h1 { 
+	padding-left: 10px;
+}
+
+footer { 
+	padding-left: 10px;
+}
